[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/cinematics/intro2/intro2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/cinematics/intro2/intro2character.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/cinematics/intro2/intro2suspicious.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/cinematics/intro2/intro2see.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Intro2.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Dialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/BackgroundIntro-CumbiaBronco.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=3]
resource_name = "End"
tracks/0/type = "value"
tracks/0/path = NodePath("ExpSee:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExpSuspicious:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 642, 362 ), Vector2( 632, 1064 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Character:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.26442 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -10.0, -80.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 644, 1066 ), Vector2( 642, 362 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.04802, 2.04802, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 642, 362 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.672, 0.672 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExpSee:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExpSuspicious:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[node name="Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="DialogBox" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Background" type="Sprite" parent="."]
position = Vector2( 642, 360.813 )
scale = Vector2( 0.671875, 0.671875 )
texture = ExtResource( 1 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 642, 362 )
scale = Vector2( 0.672, 0.672 )
texture = ExtResource( 2 )

[node name="ExpSee" type="Sprite" parent="."]
visible = false
position = Vector2( 642, 362 )
scale = Vector2( 0.672, 0.672 )
texture = ExtResource( 4 )

[node name="ExpSuspicious" type="Sprite" parent="."]
visible = false
position = Vector2( 642, 362 )
scale = Vector2( 0.672, 0.672 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/End = SubResource( 3 )
anims/Intro = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="next" from="DialogBox" to="." method="_on_DialogBox_next"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
